支持迁移表升级，显示所有本次升级的SQL，方便确认
